# FastString

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  fixed_size_str.h
.github/workflows/: cmake-multi-platform.yml  cmake.yml  learn-github-actions.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_test.cpp
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
include/: FastString.h  fixed_size_str.h
test/: CMakeLists.txt  tests.cpp
tests/: CMakeLists.txt  tests.cpp
